# hftrading

./: .gitignore  README.md  build.gradle  gradlew  gradlew.bat  optimization_v1.md  plan.md  prompt.txt  requirement.md  settings.gradle
c++_orderbook/: CMakeLists.txt  Makefile  README.md  common_def.h  error_monitor.h  feed_handler.cpp  feed_handler.h  main.cpp  message_parser.cpp  message_parser.h  order_book.cpp  order_book.h  orderbook_types.h
c++_orderbook/data/: sample_msg.txt
c++_orderbook/docker/: Dockerfile
c++_orderbook/perftest/: msg_generator.cpp
c++_orderbook/unittest/: unittest.cpp
config/: aeron.properties  default.properties
cpp/: CMakeLists.txt
cpp/include/: wire_format.h
cpp/publisher/: MarketDataPublisher.cpp
scripts/: build.cmd  generate_test_data.cmd  jvm.flags  run.bat  run.cmd  run.sh
src/main/java/com/hftrading/aeronbench/: AeronBenchmarkMain.java
src/main/java/com/hftrading/app/: AppConfig.java  Main.java
src/main/java/com/hftrading/book/: Order.java  OrderBook.java  PriceLevel.java
src/main/java/com/hftrading/config/: HftConfig.java
src/main/java/com/hftrading/feed/: AeronFeedSource.java  AeronFeedSourceImpl.java  AeronPublisher.java  CsvFeedSource.java  FeedHandler.java  FeedSource.java  MarketEvent.java  MarketEventDecoder.java  MessageType.java  Side.java
src/main/java/com/hftrading/util/: LatencyMeasurement.java  LatencyProbe.java  TestDataTool.java
src/test/java/com/hftrading/config/: HftConfigTest.java
src/test/java/com/hftrading/feed/: AeronFeedSourceIntegrationTest.java  AeronPublisherTest.java  CsvFeedSourceTest.java  MarketEventDecoderTest.java
